# Rscoop

./: .gitignore  .prototools  LICENSE  README.md  RELEASE_NOTES.md  package-lock.json  package.json  rscoop.json  status.md  tailwind.config.js  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: release.yml
bucket/: rscoop.json
docs/: _config.yml  architecture.md  developer-guide.md  getting-started.md  index.md  security.md  troubleshooting.md
docs/_site/: architecture.html  developer-guide.html  getting-started.html  index.html  security.html  troubleshooting.html
docs/_site/assets/css/: just-the-docs-dark.css  just-the-docs-light.css
docs/_site/assets/js/: search-data.json
docs/_site/user-guide/: buckets.html  index.html  installed.html  search.html  settings.html  system-health.html
docs/assets/css/: custom.css
docs/user-guide/: buckets.md  index.md  installed.md  search.md  settings.md  system-health.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cold_start.rs  icons.rs  lib.rs  main.rs  models.rs  operations.rs  scheduler.rs  state.rs  tray.rs  utils.rs
src-tauri/src/commands/: app_info.rs  auto_cleanup.rs  bucket.rs  bucket_install.rs  bucket_parser.rs  bucket_search.rs  debug.rs  hold.rs  info.rs  install.rs  installed.rs  linker.rs  manifest.rs  mod.rs  operations.rs  path.rs  powershell.rs  profile.rs  release_notes.rs  scoop.rs  scoop_interpreter.rs  search.rs  settings.rs  startup.rs  status.rs  uninstall.rs  update.rs  updates.rs  virustotal.rs
src-tauri/src/commands/doctor/: cache.rs  checkup.rs  cleanup.rs  mod.rs  shim.rs  windows_checks.rs
src-tauri/windows/fragments/: env-refresh.wxs
src-tauri/windows/installer-assets/: README.md
src/components/: BucketInfoModal.tsx  ConfirmationModal.tsx  DebugModal.tsx  Header.css  Header.tsx  ManifestModal.tsx  OperationBar.tsx  OperationModal.tsx  PackageInfoModal.tsx  ScoopStatusModal.tsx  TrayNotificationToast.tsx  UpdateBanner.tsx
src/components/common/: Card.tsx  Dropdown.tsx  Modal.tsx  SettingsCard.tsx  SettingsToggle.tsx
src/components/page/buckets/: AddBucketModal.tsx  BucketCard.tsx  BucketGrid.tsx  BucketSearch.tsx  BucketSearchResults.tsx
src/components/page/doctor/: AddShimModal.tsx  CacheManager.tsx  Checkup.tsx  Cleanup.tsx  ShimDetailsModal.tsx  ShimManager.tsx
src/components/page/installed/: InstalledPageHeader.tsx  PackageGridView.tsx  PackageListView.tsx
src/components/page/search/: SearchBar.tsx  SearchResultsList.tsx  SearchResultsTabs.tsx
src/components/page/settings/: AboutSection.tsx  AutoCleanupSettings.tsx  BucketAutoUpdateSettings.tsx  DebugSettings.tsx  DefaultLaunchPageSettings.tsx  ExportImportSettings.tsx  ExportProfileModal.tsx  HeldPackagesManagement.tsx  ImportProfileModal.tsx  LanguageSettings.tsx  OperationSettings.tsx  ScoopConfiguration.tsx  StartupSettings.tsx  ThemeSettings.tsx  TrayMenuSettings.tsx  VirusTotalSettings.tsx  WindowBehaviorSettings.tsx
src/components/ui/: CommandPalette.tsx  ThemeToggle.tsx  Toast.tsx
src/hooks/: createStoredSignal.ts  useBucketInstall.ts  useBucketSearch.ts  useBuckets.ts  useInstalledPackages.ts  usePackageInfo.ts  usePackageOperations.ts  useSearch.ts
src/i18n/: index.ts
src/i18n/locales/: ar.json  de.json  en.json  es.json  fa.json  fr.json  ja.json  ko.json  pt.json  ru.json  zh.json
src/pages/: BucketPage.tsx  DoctorPage.tsx  InstalledPage.tsx  SearchPage.css  SearchPage.tsx  SettingsPage.tsx
src/stores/: held.ts  installedPackagesStore.ts  operations.ts  settings.ts  settingsStorage.ts
src/types/: operations.ts  scoop.ts
src/utils/: clipboard.ts  date.ts  errors.ts  format.ts  fuzzySearch.ts  installCheck.ts
