[package]
name = "rscoop"
version = "1.2.5"
description = "A modern, powerful GUI for Scoop"
authors = ["AmarBego"]
license = "MIT"
repository = "https://github.com/AmarBego/Rscoop"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rscoop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["tray-icon"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.21"
tauri-plugin-log = { version = "2" }
winreg = "0.52.0"
reqwest = { version = "0.12.2", features = ["json", "blocking"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tokio = { version = "1.39.0", features = ["full"] }
chrono = { version = "0.4.41", features = ["serde"] }
windows-sys = { version = "0.59.0", features = [
    "Win32_Foundation", 
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging"
] }
regex = "1.11.1"
rayon = "1.10"
itertools = "0.14"
once_cell = "1.21.3"
tauri-plugin-dialog = "2.2.2"
tauri-plugin-process = "2.2.1"

[target."cfg(windows)".dependencies]
tauri-plugin-updater = "2.7.1"
tauri-plugin-single-instance = "2"

