[package]
name = "rscoop"
version = "1.6.1"
description = "A modern, powerful GUI for Scoop"
authors = ["AmarBego"]
license = "MIT"
repository = "https://github.com/AmarBego/Rscoop"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rscoop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-shell = "2.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.29"
tauri-plugin-log = { version = "2.8.0" }
winreg = "0.56.0"
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
csv = "1.4"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tokio = { version = "1.50.0", features = ["full"] }
chrono = { version = "0.4.44", features = ["serde"] }
dirs = "6.0"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
] }
regex = "1.12"
rayon = "1.11.0"
itertools = "0.14"
once_cell = "1.21.4"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
lnk = "0.6.3"
tauri-plugin-opener = "2"
git2 = "0.20.4"
url = "2.5"

[target."cfg(windows)".dependencies]
tauri-plugin-updater = "2.7.1"
tauri-plugin-single-instance = "2"
