[package]
name = "rscoop"
version = "1.9.3"
description = "A modern, powerful GUI for Scoop"
authors = ["AmarBego"]
license = "MIT"
repository = "https://github.com/AmarBego/Rscoop"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rscoop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-shell = "2.3.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
log = "0.4.30"
tauri-plugin-log = { version = "2.8.0" }
winreg = "0.56.0"
reqwest = { version = "0.13.4", features = ["json", "blocking"] }
csv = "1.4.0"
tauri-plugin-store = "2.4.3"
tokio = { version = "1.52.3", features = ["full"] }
chrono = { version = "0.4.44", features = ["serde"] }
dirs = "6.0.0"
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
] }
png = "0.18.1"
regex = "1.12.3"
rayon = "1.12.0"
itertools = "0.14.0"
once_cell = "1.21.4"
execra = { version = "1.1.0", features = ["tauri", "interpret"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-process = "2.3.1"
lnk = "0.6.4"
tauri-plugin-opener = "2.5.4"
git2 = { version = "0.21.0", features = ["https"] }
url = "2.5.8"

[target."cfg(windows)".dependencies]
tauri-plugin-updater = "2.10.1"
tauri-plugin-single-instance = "2.4.2"
tauri-winrt-notification = "0.7.2"
